try fix collapsable

--- a/src/scss/layout/_form-cards.scss
+++ b/src/scss/layout/_form-cards.scss
@@ -21,7 +21,7 @@
     row-gap: 7px;
     padding: 30px 0;
   }
-  .section__title {
+  .title {
     display: flex;
     justify-content: space-between;
     font-weight: 600;
